chore: P4ADEV-2087-run-code-review-with-github-action (#139)